--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body class="dark-theme">
+<body class="light-theme">
 
     <div class="chat-container">
         <div class="chat-header">
@@ -18,7 +18,7 @@
             <div class="theme-switch-wrapper">
                 <span class="material-symbols-outlined">light_mode</span>
                 <label class="theme-switch">
-                    <input type="checkbox" id="theme-slider" checked>
+                    <input type="checkbox" id="theme-slider">
                     <span class="slider round"></span>
                 </label>
                 <span class="material-symbols-outlined">dark_mode</span>
